--- a/user/Makefile
+++ b/user/Makefile
@@ -7,9 +7,9 @@ BAUDRATE = 115200
 ESPTOOL=../esptool.py
 #--------------------ENABLE IF NEEDED------------------------------------------------#
 # Availiable modes are: dio, qio, qout, dout
-#FLASH_MODE = qio
+FLASH_MODE = qio
 # Availiable sizes are: detect, 256KB, 512KB, 1MB, 2MB, 4MB, 2MB-c1, 4MB-c1, 8MB, 16MB
-#FLASH_SIZE = detect
+FLASH_SIZE = detect
 #------------------------------------------------------------------------------------#
 user_main-0x00000.bin: user_main
 	$(ESPTOOL) elf2image user_main
@@ -19,8 +19,8 @@ user_main:
 	size -d user_main
 
 flash: user_main-0x00000.bin
-	# $(ESPTOOL) --after hard_reset --baud $(BAUDRATE) --port $(PORT) write_flash --flash_mode $(FLASH_MODE) --flash_size $(FLASH_SIZE) 0x00000 user_main-0x00000.bin 0x10000 user_main-0x10000.bin
-	$(ESPTOOL) --after hard_reset --baud $(BAUDRATE) --port $(PORT) write_flash 0x00000 user_main-0x00000.bin 0x10000 user_main-0x10000.bin 
+	 $(ESPTOOL) --after hard_reset --baud $(BAUDRATE) --port $(PORT) write_flash --flash_mode=$(FLASH_MODE) --flash_size=$(FLASH_SIZE) 0x00000 user_main-0x00000.bin 0x10000 user_main-0x10000.bin
+	#$(ESPTOOL) --after hard_reset --baud $(BAUDRATE) --port $(PORT) write_flash 0x00000 user_main-0x00000.bin 0x10000 user_main-0x10000.bin 
 
 clean:
 	rm -f user_main user_main.o user_main-0x00000.bin user_main-0x10000.bin
