Custom footrpints, start of making PCB layout.

--- a/user/Makefile
+++ b/user/Makefile
@@ -6,7 +6,7 @@ CC = xtensa-lx106-elf-gcc
 #------------------------------------------------------------------------------------#
 # Set flags for compiler
 #------------------------------------------------------------------------------------#
-CFLAGS = -I. -DICACHE_FLASH -mlongcalls -std=gnu11
+CFLAGS = -I. -DICACHE_FLASH -mlongcalls -std=gnu11 -Os
 
 #------------------------------------------------------------------------------------#
 # Linker flags and libs
